@@ -4,7 +4,7 @@
 
 include ../Makefile.global
 
-SRCS		= signature.c filesub.c language.c \
+SRCS		= signature.c filesub.c language.c mib.c \
 		  msgutil.c oneline.c morefile.c \
 		  email.c fsedit.c page.c \
 		  bye.c funcs.c mail.c term.c ttyio.c openport.c \
@@ -15,7 +15,7 @@ SRCS		= signature.c filesub.c language.c \
 		  door.c dispfile.c userlist.c timestats.c logentry.c \
 		  ymsend.c ymrecv.c zmmisc.c zmsend.c zmrecv.c
 HDRS		= signature.h filesub.h language.h mbsebbs.h misc.h offline.h \
-		  timeout.h email.h fsedit.h \
+		  timeout.h email.h fsedit.h mib.h \
 		  msgutil.h oneline.h user.h bye.h morefile.h \
 		  funcs.h mail.h page.h term.h ttyio.h openport.h \
 		  change.h exitinfo.h newuser.h \
@@ -23,7 +23,7 @@ HDRS		= signature.h filesub.h language.h mbsebbs.h misc.h offline.h \
 		  pop3.h timecheck.h mbnewusr.h input.h whoson.h \
 		  door.h dispfile.h userlist.h timestats.h logentry.h lastcallers.h \
 		  ymsend.h ymrecv.h zmmisc.h zmsend.h zmrecv.h
-MBSEBBS_OBJS	= signature.o chat.o file.o funcs.o mail.o menu.o \
+MBSEBBS_OBJS	= signature.o chat.o file.o funcs.o mail.o menu.o mib.o \
 		  misc.o pinfo.o oneline.o page.o fsedit.o transfer.o \
 		  bye.o change.o mbsebbs.o timeout.o user.o timecheck.o \
 		  exitinfo.o filesub.o offline.o language.o msgutil.o \
@@ -31,7 +31,7 @@ MBSEBBS_OBJS	= signature.o chat.o file.o funcs.o mail.o menu.o \
 		  logentry.o morefile.o lastcallers.o term.o ttyio.o openport.o \
 		  ymsend.o ymrecv.o zmmisc.o zmsend.o zmrecv.o
 MBSEBBS_LIBS	= ../lib/libmbse.a ../lib/libmsgbase.a ../lib/libdbase.a ../lib/libmbinet.a ../lib/libnodelist.a
-MBNEWUSR_OBJS	= mbnewusr.o newuser.o language.o timeout.o dispfile.o oneline.o ttyio.o \
+MBNEWUSR_OBJS	= mbnewusr.o newuser.o language.o timeout.o dispfile.o oneline.o ttyio.o mib.o \
 		  timecheck.o input.o exitinfo.o funcs.o misc.o change.o door.o term.o openport.o \
 		  filesub.o mail.o email.o msgutil.o pop3.o fsedit.o whoson.o
 MBNEWUSR_LIBS	= ../lib/libmbse.a ../lib/libmsgbase.a ../lib/libdbase.a ../lib/libmbinet.a ../lib/libnodelist.a
@@ -94,13 +94,14 @@ depend:
 signature.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h signature.h funcs.h input.h language.h timeout.h term.h ttyio.h
 filesub.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/mbsedb.h filesub.h funcs.h language.h input.h misc.h timeout.h exitinfo.h change.h term.h ttyio.h
 language.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h input.h language.h term.h ttyio.h
+mib.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h mib.h
 msgutil.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/msgtext.h ../lib/msg.h oneline.h msgutil.h
 oneline.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h oneline.h funcs.h input.h language.h term.h ttyio.h
 morefile.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h input.h language.h morefile.h timeout.h term.h ttyio.h
 email.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/msgtext.h ../lib/msg.h ../lib/mbinet.h exitinfo.h language.h mail.h timeout.h msgutil.h input.h email.h whoson.h term.h ttyio.h
 fsedit.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h mail.h input.h language.h timeout.h pinfo.h fsedit.h term.h ttyio.h
 page.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h dispfile.h input.h chat.h page.h timeout.h mail.h language.h term.h ttyio.h
-bye.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/nodelist.h dispfile.h misc.h language.h bye.h term.h openport.h ttyio.h
+bye.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/nodelist.h dispfile.h misc.h language.h bye.h term.h openport.h ttyio.h mib.h
 funcs.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/msgtext.h ../lib/msg.h funcs.h term.h ttyio.h
 mail.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/nodelist.h ../lib/msgtext.h ../lib/msg.h mail.h funcs.h input.h language.h misc.h timeout.h oneline.h exitinfo.h fsedit.h filesub.h msgutil.h pop3.h email.h door.h whoson.h term.h ttyio.h openport.h
 term.o: ../config.h ../lib/mbselib.h ../lib/users.h term.h ttyio.h
