@@ -1,0 +1,9 @@
+#ifndef _MIB_H
+#define	_MIB_H
+
+/* $Id$ */
+
+
+void sendmibs(void);
+
+#endif
